--- a/checkbox.html
+++ b/checkbox.html
@@ -14,6 +14,12 @@ cursor: pointer!important;
 button {
 cursor: pointer!important;
 }
+  h1 {
+    cursor: default;
+  }
+  h {
+    cursor: default;
+  }
 </style>
 
 <div class="footer">
