--- a/checkbox.html
+++ b/checkbox.html
@@ -20,6 +20,22 @@ cursor: pointer!important;
   h {
     cursor: default;
   }
+  button {
+    width: 95px!important;
+    height: 37px!important;
+    border-radius: 6px!important;
+    border-color: transparent!important;
+    background: #00c4ff!important;
+    color: white;
+  }
+  button:hover {
+    background: #71deff;
+  }
+  button:active { 
+    background: #4da;
+    border-color: transparent;
+    border-radius: 6px;
+  }
 </style>
 
 <div class="footer">
