--- a/checkbox.html
+++ b/checkbox.html
@@ -29,7 +29,7 @@ cursor: pointer!important;
     color: white;
   }
   button:hover {
-    background: #71deff;
+    background: #71deff!important;
   }
   button:active { 
     background: #4da;
