--- a/checkbox.html
+++ b/checkbox.html
@@ -32,9 +32,9 @@ cursor: pointer!important;
     background: #71deff!important;
   }
   button:active { 
-    background: #4da;
-    border-color: transparent;
-    border-radius: 6px;
+    background: #4da!important;
+    border-color: transparent!important;
+    border-radius: 6px!important;
   }
 </style>
 
