--- a/checkbox.html
+++ b/checkbox.html
@@ -32,7 +32,7 @@ cursor: pointer!important;
     background: #71deff!important;
   }
   button:active { 
-    background: #4da!important;
+    background: #2594b5!important;
     border-color: transparent!important;
     border-radius: 6px!important;
   }
