--- a/checkbox.html
+++ b/checkbox.html
@@ -35,6 +35,7 @@ cursor: pointer!important;
     background: #2594b5!important;
     border-color: transparent!important;
     border-radius: 6px!important;
+    outline: none!important;
   }
 </style>
 
