--- a/pop.html
+++ b/pop.html
@@ -15,7 +15,7 @@
   left: 0;
   bottom: 0;
   right: 0;
-  background: linear-gradient(to right, #87e0fd 0%, #53cbf1 40%, #05abe0 100%);
+  /*background: linear-gradient(to right, #87e0fd 0%, #53cbf1 40%, #05abe0 100%);*/
 }
 .text {
   letter-spacing: 1px;
